test/cases/functions/implicit_bad.c
// RUN: %check -e %s

main()
{
	(f)(); // CHECK: /error: undeclared identifier "f"/
}
